Changed styles (added z-index for brand bar) in order to fix elements overlapping

--- a/webapp/src/main/webapp/skin/outlook.css
+++ b/webapp/src/main/webapp/skin/outlook.css
@@ -34,6 +34,7 @@ body {
   position: fixed;
   bottom: 0px;
   width: 100%;
+  z-index: 70;
 }
 
 /* It is a workaround to do not show dropdown in right-upper corner in task pane of Outlook for Windows/Web */
